--- a/src/main/resources/templates/layouts/layout2.html
+++ b/src/main/resources/templates/layouts/layout2.html
@@ -21,6 +21,7 @@
 				<div layout:fragment="content" class="content"></div>
 			</div>
 		</div>
+		<div layout:fragment="modal" class="modal"></div>
 	</main>
 	</div>
 	<div th:replace="fragments/footer::footer"></div>
