--- a/src/main/resources/templates/mypage/requestList.html
+++ b/src/main/resources/templates/mypage/requestList.html
@@ -27,7 +27,13 @@
 						<a class="text-decoration-none" th:href="@{/mypage/requests/{id}(id=${requestDto.id})}">
 							<div class="hstack mb-5">
 								<div class="card-title fs-5 my-auto me-4">[[${requestDto.title}]]</div>
-								<button class="btn btn-primary">진행중</button>
+								<th:block th:switch="${requestDto.status}">
+									<button th:case="${T(com.devmatch.constant.RequestType).REQUEST}" class="btn btn-danger">새로운 요청</button>
+									<button th:case="${T(com.devmatch.constant.RequestType).PROGRESS}" class="btn btn-primary">진행중</button>
+									<button th:case="${T(com.devmatch.constant.RequestType).COMPLETE}" class="btn" th:classappend="${requestDto.accepted ? 'btn-success' : 'btn-outline-success'}">[[${requestDto.accepted ? '완료' : '완료 요청'}]]</button>
+									<button th:case="${T(com.devmatch.constant.RequestType).CANCEL}" class="btn" th:classappend="${requestDto.accepted ? 'btn-secondary' : 'btn-outline-secondary'}">[[${requestDto.accepted ? '취소' : '취소 요청'}]]</button>
+									<button th:case="${T(com.devmatch.constant.RequestType).EDIT}" class="btn btn-warning">수정 요청</button>
+								</th:block>
 								<div class="card-text ms-auto">[[${requestDto.regDate}]]</div>
 							</div>
 							<div class="hstack">
