create, edit rating

--- a/src/main/resources/templates/mypage/requestDetail.html
+++ b/src/main/resources/templates/mypage/requestDetail.html
@@ -13,6 +13,65 @@
 	.card:hover {
 		transform: scale(1.01);
 	}
+	.rating-container {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+		justify-content: center;
+		padding: 0 20px;
+		margin-bottom: 16px;
+	}
+
+	.rating {
+		display: flex;
+		width: 100%;
+		justify-content: center;
+		overflow: hidden;
+		flex-direction: row-reverse;
+		position: relative;
+	}
+
+	.rating-0 {
+		filter: grayscale(100%);
+	}
+
+	.rating > input {
+		display: none;
+	}
+
+	.rating > label {
+		cursor: pointer;
+		width: 40px;
+		height: 40px;
+		margin-top: auto;
+		background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23e3e3e3' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: 76%;
+		transition: 0.3s;
+	}
+
+	.rating > input:checked ~ label,
+	.rating > input:checked ~ label ~ label {
+		background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23F1827E' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
+	}
+
+	.rating > input:not(:checked) ~ label:hover,
+	.rating > input:not(:checked) ~ label:hover ~ label {
+		background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23fd6f6a' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
+	}
+
+	.feedback {
+		max-width: 360px;
+		background-color: #fff;
+		padding: 16px;
+		border-radius: 8px;
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+		align-items: center;
+		box-shadow: 0 4px 30px rgba(0, 0, 0, 0.05);
+	}
 </style>
 </head>
 <body>
@@ -47,9 +106,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-10 mx-auto my-4" th:if="${requestDto.status == 'COMPLETE' && requestDto.accepted}">
+				<div class="col-md-10 mx-auto my-4" th:if="${requestDto.status eq T(com.devmatch.constant.RequestType).COMPLETE && requestDto.accepted}">
 					<div class="hstack">
-						<button id="comment-btn" class="btn btn-primary ms-auto" data-bs-toggle="modal" data-bs-target="#comment-popup">평가하기</button>
+						<button id="comment-btn" class="btn btn-primary ms-auto" data-bs-toggle="modal" data-bs-target="#comment-popup">[[${ratingFormDto.id == null ? '평가하기' : '평가수정하기'}]]</button>
 					</div>
 				</div>
 			</div>
@@ -95,11 +154,6 @@
 									<div class="ms-2">[[${requestDto.provider.name}]]</div>
 								</a>
 							</div>
-						</div>
-					</div>
-					<div class="col-md-10 mx-auto my-4" th:if="${requestDto.status == 'COMPLETE' && requestDto.accepted}">
-						<div class="hstack">
-							<button id="comment-btn" class="btn btn-primary ms-auto" data-bs-toggle="modal" data-bs-target="#comment-popup">평가하기</button>
 						</div>
 					</div>
 				</div>
@@ -187,9 +241,21 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <form class="" action="">
+            <form class="" th:action="@{/mypage/requests/rating}" method="post" th:object="${ratingFormDto}">
+            	<input type="hidden" th:field="*{id}">
+            	<input type="hidden" th:value="${requestDto.id}" name="requestId" id="requestId">
+            	<div class="rating-container">
+								<div class="feedback">
+									<div class="rating">
+										<th:block th:each="num : ${#numbers.sequence(5, 1)}">
+											<input type="radio" name="score" th:id="${'rating-' + num}" th:value="${num}" th:checked="${ratingFormDto.score == num ? 'checked' : null}" >
+											<label th:for="${'rating-' + num}"></label>
+										</th:block>
+									</div>
+								</div>
+							</div>
               <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                <textarea class="form-control" placeholder="Leave a comment here" th:field="*{content}" id="floatingTextarea2" style="height: 100px"></textarea>
                 <label for="floatingTextarea2">Comments</label>
               </div>
               <div class="hstack">
