평점 리뷰 구현

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -132,7 +132,7 @@
 							</div>
 
 							<div class="hstack">
-								<a class="ms-auto me-5" href="./view/findPartner.html"><button
+								<a class="ms-auto me-5" th:href="@{/partners}"><button
 										class="btn btn-primary btn-lg">파트너 찾기</button></a>
 							</div>
 						</div>
