--- a/src/main/resources/templates/mypage/requestDetail.html
+++ b/src/main/resources/templates/mypage/requestDetail.html
@@ -107,8 +107,8 @@
 					</div>
 				</div>
 				<div class="col-md-10 mx-auto my-4" th:if="${requestDto.status eq T(com.devmatch.constant.RequestType).COMPLETE && requestDto.accepted}">
-					<div class="hstack">
-						<button id="comment-btn" class="btn btn-primary ms-auto" data-bs-toggle="modal" data-bs-target="#comment-popup">[[${ratingFormDto.id == null ? '평가하기' : '평가수정하기'}]]</button>
+					<div class="hstack justify-content-end gap-4">
+						<button id="comment-btn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#comment-popup">[[${ratingFormDto.id == null ? '평가하기' : '평가수정하기'}]]</button>
 					</div>
 				</div>
 			</div>
