--- a/src/main/resources/templates/mypage/dashboard.html
+++ b/src/main/resources/templates/mypage/dashboard.html
@@ -14,116 +14,115 @@
 		<div class="col-lg-8">
 			<div class="row row-cols-1 row-cols-md-2 gy-4">
 				<!-- 고객 -->
-				<!--
-				<div class="col">
-					<div class="border rounded-4 vstack p-5 text-center" style="aspect-ratio: 16/9;">
-						<h5 class="fs-3 mb-3 mt-auto">Username</h5>
-						<p class="mb-0">email@email.com</p>
-						<p class="mb-auto">등록일 : <span>yyyy/mm/dd</span></p>
+				<th:block sec:authorize="hasRole('ROLE_CUSTOMER')">
+					<div class="col">
+						<div class="border rounded-4 vstack p-5 text-center" style="aspect-ratio: 16/9;">
+							<h5 class="fs-3 mb-3 mt-auto">[[${memberDto.name}]]</h5>
+							<p class="mb-0">[[${memberDto.email}]]</p>
+							<p class="mb-auto">등록일 : <span>[[${memberDto.regDate}]]</span></p>
+						</div>
 					</div>
-				</div>
-				<div class="col">
-					<div class="border rounded-4 vstack" style="aspect-ratio: 16/9;">
-						<div class="ps-5 mb-4 mt-auto">요청통계</div>
-						<div class="hstack gap-5 mb-auto">
-							<div class="ms-auto ">
-								<div class="d-flex justify-content-center align-items-center fs-2 rounded-4 p-3 bg-secondary text-white mb-3" style="width: 64px; height: 64px;">0</div>
-								<div class="rounded-2 bg-secondary text-center text-white">완료</div>
-							</div>
-							<div class="me-auto">
-								<div class="d-flex justify-content-center align-items-center fs-2 rounded-4 p-3 bg-primary text-white mb-3" style="width: 64px; height: 64px;">0</div>
-								<div class="rounded-2 bg-primary text-center text-white">진행중</div>
+					<div class="col">
+						<div class="border rounded-4 vstack" style="aspect-ratio: 16/9;">
+							<div class="ps-5 mb-4 mt-auto">요청통계</div>
+							<div class="hstack gap-5 mb-auto">
+								<div class="ms-auto ">
+									<div class="d-flex justify-content-center align-items-center fs-2 rounded-4 p-3 bg-secondary text-white mb-3" style="width: 64px; height: 64px;">[[${completedRequestCount}]]</div>
+									<div class="rounded-2 bg-secondary text-center text-white">완료</div>
+								</div>
+								<div class="me-auto">
+									<div class="d-flex justify-content-center align-items-center fs-2 rounded-4 p-3 bg-primary text-white mb-3" style="width: 64px; height: 64px;">[[${progressingRequestCount}]]</div>
+									<div class="rounded-2 bg-primary text-center text-white">진행중</div>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-			-->
-
+				</th:block>
 				<!-- 파트너  -->
-				<!--
-				<div class="col">
-					<div class="profile-card-adapt background-gradient-1">
-						<div class="profile-card__top">
-							<div class="profile-card__grade">
-								<img src="../images/grade/Level=1.png" alt="grad-img">
+				<th:block sec:authorize="hasRole('ROLE_PROVIDER')">
+					<div class="col">
+						<div class="profile-card-adapt background-gradient-1">
+							<div class="profile-card__top">
+								<div class="profile-card__grade">
+									<img src="../images/grade/Level=1.png" alt="grad-img">
+								</div>
+								<div class="profile-card__desc">
+									<h5 class="desc__greeting">[[${profileCardDto.title}]]</h5>
+									<p class="desc__intro">[[${profileCardDto.subTitle}]]</p>
+								</div>
 							</div>
-							<div class="profile-card__desc">
-								<h5 class="desc__greeting">Java Spring Boot 백엔드 개발자</h5>
-								<p class="desc__intro">
-									자기만의 웹사이트, 기업 관리시스템 등 다양한 서비스를 만들어드립니다.
-								</p>
+							<div class="profile-card__bottom prov-profile">
+								<img class="prov-profile__img object-fit-cover" th:src="${profileCardDto.memberImgUrl}" alt="prov-img" onerror="this.src = '/images/empty-profile-img.jpg'">
+								<span class="prov-profile__name">[[${profileCardDto.memberName}]]</span>
 							</div>
-						</div>
-						<div class="profile-card__bottom prov-profile">
-							<img class="prov-profile__img" src="../images/profile-img-640.jpg" alt="prov-img">
-							<span class="prov-profile__name">김김김</span>
 						</div>
 					</div>
-				</div>
 
-				<div class="col">
-					<div class="border rounded-4 vstack p-5 text-center" style="aspect-ratio: 16/9;">
-						<h5 class="fs-3 mb-3 mt-auto">Username</h5>
-						<p class="mb-0">email@email.com</p>
-						<p class="mb-auto">등록일 : <span>yyyy/mm/dd</span></p>
+					<div class="col">
+						<div class="border rounded-4 vstack p-5 text-center" style="aspect-ratio: 16/9;">
+							<h5 class="fs-3 mb-3 mt-auto">[[${memberDto.name}]]</h5>
+							<p class="mb-0">[[${memberDto.email}]]</p>
+							<p class="mb-auto">등록일 : <span>[[${memberDto.regDate}]]</span></p>
+						</div>
 					</div>
-				</div>
 
-				<div class="col">
-					<div class="border rounded-4 vstack" style="aspect-ratio: 16/9;">
-						<div class="mx-auto mt-auto mb-4">
-							<div class="star-group rate-3-half">
-								<div class="star"></div>
-								<div class="star"></div>
-								<div class="star"></div>
-								<div class="star"></div>
-								<div class="star"></div>
+					<div class="col">
+						<div class="border rounded-4 vstack" style="aspect-ratio: 16/9;">
+							<div class="mx-auto mt-auto mb-4">
+								<div class="star-group" th:classappend="${'rate-' + ratingAvg.intValue + (ratingAvg - T(java.lang.Math).floor(ratingAvg) >= 0.5 ? '-half' : '')}">
+									<div class="star"></div>
+									<div class="star"></div>
+									<div class="star"></div>
+									<div class="star"></div>
+									<div class="star"></div>
+								</div>
+							</div>
+							<div class="mx-auto mb-auto">
+									<div class="d-flex justify-content-center align-items-center fs-2 rounded-4 py-3 px-4 bg-primary text-white mb-3" >[[${ratingAvg}]]</div>
 							</div>
 						</div>
-						<div class="mx-auto mb-auto">
-								<div class="d-flex justify-content-center align-items-center fs-2 rounded-4 py-3 px-4 bg-primary text-white mb-3" >8.9</div>
-						</div>
 					</div>
-				</div>
 
-				<div class="col">
-					<div class="border rounded-4 vstack" style="aspect-ratio: 16/9;">
-						<div class="hstack gap-5 my-auto">
-							<div class="ms-auto ">
-								<div class="d-flex justify-content-center align-items-center fs-2 rounded-4 p-3 bg-primary text-white mb-3">80%</div>
-								<div class="text-center">완료</div>
-							</div>
-							<div class="me-auto">
-								<div class="d-flex justify-content-center align-items-center fs-2 rounded-4 p-3 px-4 bg-primary text-white mb-3">12</div>
-								<div class="text-center">진행중</div>
+					<div class="col">
+						<div class="border rounded-4 vstack" style="aspect-ratio: 16/9;">
+							<div class="hstack gap-5 my-auto">
+								<div class="ms-auto ">
+									<div class="d-flex justify-content-center align-items-center fs-2 rounded-4 p-3 bg-primary text-white mb-3">[[${successRate == null ? 0 : successRate}]]%</div>
+									<div class="text-center">완료</div>
+								</div>
+								<div class="me-auto">
+									<div class="d-flex justify-content-center align-items-center fs-2 rounded-4 p-3 px-4 bg-primary text-white mb-3">[[${progressingResultCount == null ? 0 : progressingResultCount}]]</div>
+									<div class="text-center">진행중</div>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-			-->
+				</th:block>
 				<!-- 관리자 -->
-				<div class="col" th:object="${memberDto}">
-					<div class="border rounded-4 vstack p-5 text-center" style="aspect-ratio: 16/9;">
-						<h5 class="fs-3 mb-3 mt-auto" th:text="*{name}">Username</h5>
-						<p class="mb-0" th:text="*{email}">email@email.com</p>
-						<p class="mb-auto">등록일 : <span th:text="*{regDate}">yyyy/mm/dd</span></p>
-					</div>
-				</div>
-
-				<div class="col">
-					<div class="border rounded-4 vstack" style="aspect-ratio: 16/9;">
-						<div class="mx-auto mt-auto">
-								<div class="d-flex justify-content-center align-items-center fs-2 rounded-4 py-3 px-4 bg-primary text-white mb-3" >8.9</div>
+				<th:block sec:authorize="hasRole('ROLE_ADMIN')">
+					<div class="col" th:object="${memberDto}">
+						<div class="border rounded-4 vstack p-5 text-center" style="aspect-ratio: 16/9;">
+							<h5 class="fs-3 mb-3 mt-auto" th:text="*{name}">Username</h5>
+							<p class="mb-0" th:text="*{email}">email@email.com</p>
+							<p class="mb-auto">등록일 : <span th:text="*{regDate}">yyyy/mm/dd</span></p>
 						</div>
-						<div class="mb-auto text-center">총 요청량</div>
 					</div>
-				</div>
 
-				<div class="col">
-					<div>
-						<canvas id="myChart"></canvas>
+					<div class="col">
+						<div class="border rounded-4 vstack" style="aspect-ratio: 16/9;">
+							<div class="mx-auto mt-auto">
+									<div class="d-flex justify-content-center align-items-center fs-2 rounded-4 py-3 px-4 bg-primary text-white mb-3" >[[${totalRequest}]]</div>
+							</div>
+							<div class="mb-auto text-center">누적 요청량</div>
+						</div>
 					</div>
-				</div>
+
+					<div class="col">
+						<div>
+							<canvas id="myChart"></canvas>
+						</div>
+					</div>
+				</th:block>
 
 			</div>
 		</div>
